objects/HS_Activity__c.object
<CustomObject>
    <fields>
        <fullName>HS_Activity_type__c</fullName>
        <label>HS Activity type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic Application</fullName>
                </value>
                <value>
                    <fullName>Manual Record Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Application_Status__c</fullName>
        <inlineHelpText>The young persons application progress</inlineHelpText>
        <label>HS Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application in Progress</fullName>
                </value>
                <value>
                    <fullName>Application Submitted - Awaiting Confirmation</fullName>
                </value>
                <value>
                    <fullName>Placement Confirmed</fullName>
                </value>
                <value>
                    <fullName>Application Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Application_form_Email__c</fullName>
        <inlineHelpText>email taken from application form</inlineHelpText>
        <label>HS Application form: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HS_Application_form_Home_address__c</fullName>
        <label>HS Application form: Home address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Application_form_PG_s_email_address__c</fullName>
        <description>For Grads 2013 only</description>
        <label>HS Application form: PG&apos;s email address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Application_form_PG_s_first_name__c</fullName>
        <description>For Grads 2013 only</description>
        <label>HS Application form: PG&apos;s first name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Application_form_PG_s_last_name__c</fullName>
        <description>For Grads 2013 only</description>
        <label>HS Application form: PG&apos;s last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Application_form_Telephone_number__c</fullName>
        <description>For Grads 2013 only</description>
        <label>HS Application form: Telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HS_Attendance_at_KO_confirmed__c</fullName>
        <label>HS Attendance at KO confirmed:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Attended_KO__c</fullName>
        <label>HS Attended KO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Date_of_birth__c</fullName>
        <label>HS Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Hours_Total__c</fullName>
        <label>HS Hours Total</label>
        <summarizedField>HS_Hours__c.HS_Hours__c</summarizedField>
        <summaryForeignKey>HS_Hours__c.HS_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HS_Owner_First_Name__c</fullName>
        <formula>HS_Owner__r.FirstName</formula>
        <label>HS Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HS Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HS_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Post_Interview_Notes__c</fullName>
        <label>HS Post-Interview Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HS_Post_Interview_Result__c</fullName>
        <label>HS Post-Interview Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Passed Interview</fullName>
                </value>
                <value>
                    <fullName>Secured Job</fullName>
                </value>
                <value>
                    <fullName>Job Ready</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Post_code__c</fullName>
        <label>HS Post code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Status__c</fullName>
        <label>HS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed up</fullName>
                </value>
                <value>
                    <fullName>Started volunteering</fullName>
                </value>
                <value>
                    <fullName>Completed hours</fullName>
                </value>
                <value>
                    <fullName>Attending interview</fullName>
                </value>
                <value>
                    <fullName>Attended interview</fullName>
                </value>
                <value>
                    <fullName>Passed interview</fullName>
                </value>
                <value>
                    <fullName>Secured job placement</fullName>
                </value>
                <value>
                    <fullName>Returned P2</fullName>
                </value>
                <value>
                    <fullName>Quit volunteering</fullName>
                </value>
                <value>
                    <fullName>Considering leaving HeadStart</fullName>
                </value>
                <value>
                    <fullName>Left HeadStart</fullName>
                </value>
                <value>
                    <fullName>Defer to Autumn</fullName>
                </value>
                <value>
                    <fullName>defer to summer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Types_for_volunteering_interested_in__c</fullName>
        <label>HS Types for volunteering interested in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sports development</fullName>
                </value>
                <value>
                    <fullName>Social Care (day care/elderly/hospice)</fullName>
                </value>
                <value>
                    <fullName>Education/Mentoring</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Homeless / Food bank</fullName>
                </value>
                <value>
                    <fullName>Gardening/Conservation</fullName>
                </value>
                <value>
                    <fullName>Creative Arts</fullName>
                </value>
                <value>
                    <fullName>Children/youth</fullName>
                </value>
                <value>
                    <fullName>Disability / mental health</fullName>
                </value>
                <value>
                    <fullName>Council/Community Centre</fullName>
                </value>
                <value>
                    <fullName>Refugee / Asylum Seekers</fullName>
                </value>
                <value>
                    <fullName>Faith Groups</fullName>
                </value>
                <value>
                    <fullName>Animal</fullName>
                </value>
                <value>
                    <fullName>BME</fullName>
                </value>
                <value>
                    <fullName>Women</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Volunteering_hours__c</fullName>
        <description>Volunteering hours recorded from 16th July 2014</description>
        <formula>if( HeadStart_Cycle__c =&quot;&quot;,Young_Person__r.HS_Volunteering_hours__c, Young_Person__r.HS_Volunteer_Hours_Pilot_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS Volunteering hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_Volunteering_opportunity_borough__c</fullName>
        <label>HS Volunteering opportunity borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Hillingdon North</fullName>
                </value>
                <value>
                    <fullName>Hillingdon South</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Tower Hamlets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Volunteering_opportunity_cluster__c</fullName>
        <formula>IF( ISPICKVAL( Override_HS_Cluster__c , &quot;BCHIC&quot;) , &quot;BCHIC&quot;, 
 IF( ISPICKVAL( Override_HS_Cluster__c , &quot;BHEN&quot;) , &quot;BHEN&quot;, 
 IF( ISPICKVAL( Volunteering_Placement__r.HS_Cluster__c , &quot;BCHIC&quot;) , &quot;BCHIC&quot;,
 IF( ISPICKVAL( Volunteering_Placement__r.HS_Cluster__c , &quot;BHEN&quot;) , &quot;BHEN&quot;,
 IF( CONTAINS( Young_Person__r.Assigned_Wave__r.Name , &quot;BCHIC&quot;) , &quot;BCHIC&quot;,
 IF( CONTAINS( Young_Person__r.Assigned_Wave__r.Name , &quot;BHEN&quot;) , &quot;BHEN&quot;, 
 IF( EOI_HS_Cluster__c = &quot;BCHIC&quot; , &quot;BCHIC&quot;, 
 IF( EOI_HS_Cluster__c = &quot;BHEN&quot; , &quot;BHEN&quot;, 
null) ) ) ) ) ) ) )</formula>
        <label>HS Volunteering opportunity cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_YP_mobile_number__c</fullName>
        <label>HS YP mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HS_address_line_1__c</fullName>
        <label>HS address line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_address_line_2__c</fullName>
        <label>HS address line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_address_line_3__c</fullName>
        <label>HS address line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_team_contact_number__c</fullName>
        <formula>IF( ISPICKVAL(  Volunteering_Placement__r.HS_Cluster__c  , &quot;BCHIC&quot;) , &quot;07432 733338&quot;,  IF( ISPICKVAL(  Volunteering_Placement__r.HS_Cluster__c  , &quot;BHEN&quot;) , &quot;07584 232766&quot;, &quot;020 3542 2400&quot;) )</formula>
        <label>HS team contact number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_free_school_meals__c</fullName>
        <label>Have you ever had free school meals?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HeadStart_Cycle__c</fullName>
        <inlineHelpText>This indicates which cycle this activity is in</inlineHelpText>
        <label>HeadStart Cycle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadStart_SO_Owner__c</fullName>
        <formula>Volunteering_Placement__r.HS_Owner_Systems_use__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeadStart SO Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadStart_Update_Detail__c</fullName>
        <defaultValue>text(today())</defaultValue>
        <inlineHelpText>links to YP Profile as detail</inlineHelpText>
        <label>HeadStart Update Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HeadStart_Update_Title__c</fullName>
        <defaultValue>&quot;Welcome to HeadStart&quot;</defaultValue>
        <inlineHelpText>Links to YP Profile as a heading</inlineHelpText>
        <label>HeadStart Update Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_Impairment_Info__c</fullName>
        <inlineHelpText>If yes, please provide more information on your hearing impairment.</inlineHelpText>
        <label>Hearing Impairment Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hearing_impairment__c</fullName>
        <description>Does the YP have a hearing impairment?</description>
        <inlineHelpText>Does the YP have a hearing impairment?</inlineHelpText>
        <label>Hearing impairment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holidays_planned__c</fullName>
        <label>Holidays planned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Verification_Notes__c</fullName>
        <inlineHelpText>Any additional comments partner wanted to add.</inlineHelpText>
        <label>Hours Verification Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Verified__c</fullName>
        <inlineHelpText>Has the charity partner verified this YP&apos;s hours?</inlineHelpText>
        <label>Hours Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Actions_taken__c</fullName>
        <label>Incident: Actions taken</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Contacted_Parent__c</fullName>
        <label>Incident: Contacted Parent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Date_Time__c</fullName>
        <inlineHelpText>Enter date and time of the incident</inlineHelpText>
        <label>Incident: Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <inlineHelpText>Short description of the incident</inlineHelpText>
        <label>Incident: Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Directly_Affected__c</fullName>
        <inlineHelpText>Those directly affected by the incident</inlineHelpText>
        <label>Incident: Directly Affected</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Location__c</fullName>
        <label>Incident: Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Section_of_the_programme__c</fullName>
        <label>Incident: Section of the programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Volunteering Placement</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <inlineHelpText>Select type of incident</inlineHelpText>
        <label>Incident: Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behaviour</fullName>
                </value>
                <value>
                    <fullName>Damage to property</fullName>
                </value>
                <value>
                    <fullName>Data Loss</fullName>
                </value>
                <value>
                    <fullName>Disclosures and Safeguarding</fullName>
                </value>
                <value>
                    <fullName>Health and Safety</fullName>
                </value>
                <value>
                    <fullName>Staff Health</fullName>
                </value>
                <value>
                    <fullName>Misc Incident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inclusion_Result__c</fullName>
        <formula>if(text( Date_HS_Application_form_received__c )=&quot;&quot;,&quot;No Application yet&quot;,(if(or(ispickval(  Restricted_mobility__c ,&quot;yes&quot;),ispickval(  Physical_disability__c ,&quot;yes&quot;),ispickval(  Visual_impairment__c ,&quot;yes&quot;),ispickval(  Hearing_impairment__c ,&quot;yes&quot;),ispickval( Any_special_educational_needs__c ,&quot;yes&quot;)),&quot;Assistance needed&quot;,&quot;Does not need assistance&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inclusion Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Date_and_Time__c</fullName>
        <description>Induction date and time mapped from Signposting Opportunity</description>
        <formula>Volunteering_Placement__r.Induction_Date_and_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Induction Date and Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Details__c</fullName>
        <formula>Volunteering_Placement__r.Induction_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Induction Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Induction_Location__c</fullName>
        <description>Induction Location mapped from Signposting Opportunity</description>
        <formula>Volunteering_Placement__r.Induction_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Induction Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_marketing_lead__c</fullName>
        <label>Initial marketing lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HeadStart Team</fullName>
                </value>
                <value>
                    <fullName>Non-Headstart Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_day_preference__c</fullName>
        <label>Interview day preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_preference__c</fullName>
        <label>Interview preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Look</fullName>
                </value>
                <value>
                    <fullName>Starbucks</fullName>
                </value>
                <value>
                    <fullName>Berkeley Group</fullName>
                </value>
                <value>
                    <fullName>Lloyds (London only)</fullName>
                </value>
                <value>
                    <fullName>GLA (London only)</fullName>
                </value>
                <value>
                    <fullName>Zendesk (London only)</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t want an interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inverview_FeedbackHS__c</fullName>
        <label>Inverview Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invite_to_which_welcome_day__c</fullName>
        <label>Invite to which welcome day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KO_General_Info__c</fullName>
        <formula>if(ispickval(Which_KO__c,&quot;1&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;2&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;3&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;4&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;5&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;6&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;7&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;8&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;9&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;10&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;11&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;12&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;13&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;14&quot;),&quot;&quot;,
&quot;&quot;))))))))))))))</formula>
        <label>KO General Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KO_Travel_Guide__c</fullName>
        <formula>if(ispickval(Which_KO__c,&quot;1&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;2&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;3&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;4&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;5&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;6&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;7&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;8&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;9&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;10&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;11&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;12&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;13&quot;),&quot;&quot;,
if(ispickval(Which_KO__c,&quot;14&quot;),&quot;&quot;,
&quot;&quot;))))))))))))))</formula>
        <label>KO Travel Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KT_Own_Vol_Borough__c</fullName>
        <inlineHelpText>Own volunteering - Borough volunteering in KT</inlineHelpText>
        <label>KT - Own Vol Borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Camden, or The City</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Primary_Borough__c</fullName>
        <label>KT - Primary Borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Camden, or The City</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KT_Primary_volunteering_preference_1__c</fullName>
        <label>KT - Primary volunteering preference 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KT_Primary_Borough__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barnardos Totteridge (Retail)</fullName>
                </value>
                <value>
                    <fullName>Barnardos Borehamwood (Retail)</fullName>
                </value>
                <value>
                    <fullName>Middlesex FA (coaching/supporting)</fullName>
                </value>
                <value>
                    <fullName>St Joseph&apos;s (disability)</fullName>
                </value>
                <value>
                    <fullName>Retail trust (elderly/befriending)</fullName>
                </value>
                <value>
                    <fullName>Stephens House and Gardens, Finchley (conservation)</fullName>
                </value>
                <value>
                    <fullName>Noah&apos;s Ark Children&apos;s Hospice (fundraising)</fullName>
                </value>
                <value>
                    <fullName>Enfield Play Association (Children)</fullName>
                </value>
                <value>
                    <fullName>Edmonton Foodbank (poverty reduction/general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Nightingale Cancer Support (Retail/fundraising)</fullName>
                </value>
                <value>
                    <fullName>Oxfam Enfield Town (Retail)</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Edmonton (retail)</fullName>
                </value>
                <value>
                    <fullName>Enfield STARS (centre for young adults with disabilities)</fullName>
                </value>
                <value>
                    <fullName>Enfield Town Footbal Club (general volunteering)</fullName>
                </value>
                <value>
                    <fullName>Enfield Conservation Volunteers (conservation)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Wood Green (Retail)</fullName>
                </value>
                <value>
                    <fullName>Haringey Foodbank, Tottenham (general volunteering/poverty reduction)</fullName>
                </value>
                <value>
                    <fullName>Haringey Play (children)</fullName>
                </value>
                <value>
                    <fullName>Markfield After School Club, Tottenham (children/disability)</fullName>
                </value>
                <value>
                    <fullName>Markfield Saturdays, Tottenham (Children)</fullName>
                </value>
                <value>
                    <fullName>Haringey Mencap, Tottenham (disability/disco)</fullName>
                </value>
                <value>
                    <fullName>Inspiring Youth Action (youth/mentoring)</fullName>
                </value>
                <value>
                    <fullName>Cancer Research, Muswell Hill (Retail)</fullName>
                </value>
                <value>
                    <fullName>Efiba Arts (children/disability/project )</fullName>
                </value>
                <value>
                    <fullName>British Heart Foundation, Wood Green (retail)</fullName>
                </value>
                <value>
                    <fullName>Jackson&apos;s Lane Theatre (check TCS website before selecting)</fullName>
                </value>
                <value>
                    <fullName>St Michael&apos;s Youth Project (children/youth Work/community)</fullName>
                </value>
                <value>
                    <fullName>Kinja FC (football coaching)</fullName>
                </value>
                <value>
                    <fullName>Brent Libraries (council/ community centre)</fullName>
                </value>
                <value>
                    <fullName>Barn Hill Conservation Group (outdoor conservation volunteering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>